--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
     "manifest_version": 2,
     "name": "Rundown CSS",
-    "description": "Show all element positioning CSS by hitting the rundown button.",
+    "description": "Helps you debug CSS by showing all elements positioning using colored backgrounds.",
     "version": "0.0.1",
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "icon128.png",
         "default_title": "Rundown CSS"
     },
     "background": {
         "scripts": ["js/background.js"]
     },
     "permissions": [
-        "tabs", "http://*/*", "https://*/*"
-    ]
+        "tabs", "*://*/*"
+    ],
+    "icons": { 
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png" 
+    }
 }
